# metric-glance

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build-zip.ps1  converter.js  manifest.json  options.html  options.js  styles.css  test-page.html
.github/workflows/: release.yml
collect/: .gitignore  package-lock.json  package.json  schema.sql  worker.js  wrangler.toml
docs/: privacy.html
extension/: background.js  converter.js  manifest.json  mg-privacy-watch.js  mg-uploader.js  options.html  options.js  popup.html  popup.js  styles.css  welcome.html  welcome.js
train/: .env.example  README.md  classifier.ipynb  pyproject.toml  refresh_data.py
