[project]
name = "train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "skl2onnx>=1.20.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "python-dotenv>=1.2.2",
]
